--- a/promptmule_api_demo_v2.ipynb
+++ b/promptmule_api_demo_v2.ipynb
@@ -7,7 +7,7 @@
       "cell_execution_strategy": "setup",
       "private_outputs": true,
       "name": "promptmule-api-demo-v2.ipynb",
-      "authorship_tag": "ABX9TyOjvcV10go5+xuGam5fNko9",
+      "authorship_tag": "ABX9TyNO7tMBCWdfpuGm0l4SaI/m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,10 +82,10 @@
     {
       "cell_type": "code",
       "source": [
-        "your_new_username = \"matt\"    # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
-        "your_new_password = \"Avry(0mp;!#\"     # complex passwords are required (str)\n",
-        "your_same_old_email = \"matt@promptmule.com\" # must be a valid email as it is used in this process to validate (str)\n",
-        "your_new_appname = \"promptmule\"       # this is the application that you are writing that will use the promptmule api, it should be unique (str)\n",
+        "your_new_username = \"YOUR_USERNAME\"    # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
+        "your_new_password = \"YOUR_PASSWORD\"     # complex passwords are required (str)\n",
+        "your_same_old_email = \"YOUR_EMAIL\" # must be a valid email as it is used in this process to validate (str)\n",
+        "your_new_appname = \"YOUR_APPLICATION_NAME\"       # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
         "\n",
         "headers = {\n",
         "    'Content-Type': 'application/json'\n",
