--- a/promptmule_api_demo_v2.ipynb
+++ b/promptmule_api_demo_v2.ipynb
@@ -66,7 +66,7 @@
     {
       "cell_type": "code",
       "source": [
-        "ENDPOINT = 'https://goo.by/3mnqu'\n",
+        "ENDPOINT = 'https://820czjhki0.execute-api.us-west-2.amazonaws.com/dev/'\n",
         "OPENAI_API_KEY = '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' # this is your OpenAI API Key, it impacts your model choice\n",
         "REGISTRATION = 'dev-signup' # registration for a developer\n",
         "LOGIN = 'login'\n",
