--- a/promptmule_api_demo_v2.ipynb
+++ b/promptmule_api_demo_v2.ipynb
@@ -7,7 +7,6 @@
       "cell_execution_strategy": "setup",
       "private_outputs": true,
       "name": "promptmule-api-demo-v2.ipynb",
-      "authorship_tag": "ABX9TyNO7tMBCWdfpuGm0l4SaI/m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +66,6 @@
       "cell_type": "code",
       "source": [
         "ENDPOINT = 'https://820czjhki0.execute-api.us-west-2.amazonaws.com/dev/'\n",
-        "OPENAI_API_KEY = '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' # this is your OpenAI API Key, it impacts your model choice\n",
         "REGISTRATION = 'dev-signup' # registration for a developer\n",
         "LOGIN = 'login'\n",
         "KEY_GEN = 'api-keys'\n",
@@ -82,10 +80,10 @@
     {
       "cell_type": "code",
       "source": [
-        "your_new_username = \"YOUR_USERNAME\"    # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
-        "your_new_password = \"YOUR_PASSWORD\"     # complex passwords are required (str)\n",
-        "your_same_old_email = \"YOUR_EMAIL\" # must be a valid email as it is used in this process to validate (str)\n",
-        "your_new_appname = \"YOUR_APPLICATION_NAME\"       # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "your_new_username = \"matt\"    # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
+        "your_new_password = \"Password!123\"     # complex passwords are required (str)\n",
+        "your_same_old_email = \"matt@promptmule.com\" # must be a valid email as it is used in this process to validate (str)\n",
+        "your_new_appname = \"mycoolapp\"       # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
         "\n",
         "headers = {\n",
         "    'Content-Type': 'application/json'\n",
@@ -202,11 +200,11 @@
       "source": [
         "headers = {\n",
         "    'Content-Type': 'application/json',\n",
-        "    'Authorization': api_token\n",
-        "    }\n",
+        "    'Authorization': 'Bearer ' + api_token\n",
+        "}\n",
         "\n",
         "data_raw = {\n",
-        "  \"appName\": \"promptmule\"\n",
+        "  \"app-name\": your_new_appname\n",
         "}"
       ],
       "metadata": {
@@ -265,6 +263,8 @@
     {
       "cell_type": "code",
       "source": [
+        "OPENAI_API_KEY = 'YOUR_OPENAI_KEY' # this is your OpenAI API Key, it may impact your model choice\n",
+        "\n",
         "headers = {\n",
         "    'Authorization': api_token,\n",
         "    'x-api-key': api_key,\n",
