Last but not least, final version of the demo, anonymized.

--- a/promptmule_api_demo_v2.ipynb
+++ b/promptmule_api_demo_v2.ipynb
@@ -81,10 +81,10 @@
     {
       "cell_type": "code",
       "source": [
-        "your_new_username = \"matt\"    # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
-        "your_new_password = \"Password!123\"     # complex passwords are required (str)\n",
-        "your_same_old_email = \"matt@promptmule.com\" # must be a valid email as it is used in this process to validate (str)\n",
-        "your_new_appname = \"mycoolapp001\"       # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "your_new_username = \"YOUR_USERNAME\"    # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
+        "your_new_password = \"YOUR_PASSWORD\"     # complex passwords are required (str)\n",
+        "your_same_old_email = \"YOUR_EMAIL\" # must be a valid email as it is used in this process to validate (str)\n",
+        "your_new_appname = \"YOUR_APPNAME\"       # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
         "\n",
         "headers = {\n",
         "    'Content-Type': 'application/json'\n",
