--- a/promptmule_api_demo_v2.ipynb
+++ b/promptmule_api_demo_v2.ipynb
@@ -43,7 +43,12 @@
         "\n",
         "Please note that a more extensive demonstration of the PromptMule functionality is slated for our upcoming demo, set to launch at the conclusion of our next sprint!\n",
         "\n",
-        "We invite you to delve into this interactive exploration, and encourage your engagement and feedback. Visit us at www.promptmule.com."
+        "We invite you to delve into this interactive exploration, and encourage your engagement and feedback. Visit us at www.promptmule.com.\n",
+        "Here's a refined version of your text:\n",
+        "\n",
+        "---\n",
+        "\n",
+        "To start, simply click on the \"Run Cell\" button situated to the left of the code block. It bears a resemblance to the play button you might find on your DVD player in the garage. Once activated, feel free to explore and experiment with the code."
       ],
       "metadata": {
         "id": "0-1LXf7avPdi"
@@ -77,6 +82,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "\n",
+        "To proceed, you'll need to personalize the following items with your own information: `username`, `password`, `email address` (make sure it's a valid one as we will be sending a verification email), and `application name`. This information will be used to register your account with PromptMule, allowing you to generate an API Key. This process is quite similar to the registration procedure with OpenAI, if you've done that before. It's straightforward and simple."
+      ],
+      "metadata": {
+        "id": "NKkg65iMP7b6"
+      }
     },
     {
       "cell_type": "code",
