--- a/promptmule_api_demo_v2.ipynb
+++ b/promptmule_api_demo_v2.ipynb
@@ -37,9 +37,9 @@
         "\n",
         "Welcome to our interactive demonstration guide. This tutorial will navigate you through the process of creating an API Key and Token, enabling you to utilize the PromptMule cloud cache. Specifically designed for a Google Colaboratory runtime environment, this demo offers an engaging exploration into sending prompts through OpenAI and testing cache functions.\n",
         "\n",
-        "Begin by clicking the \"Open in Colab\" icon situated at the top left corner of this page. This action opens the notebook in a new tab, granting you the ability to run, modify, and interact with the code within.\n",
+        "If you are in github: Begin by clicking the \"Open in Colab\" icon situated at the top left corner of the Github Preview page. This action opens the Google Colab notebook in a new tab, granting you the ability to run, modify, and interact with the demo code within.\n",
         "\n",
-        "Upon launching the notebook in Google Colab, follow the subsequent step-by-step instructions to create your API Key and Token.\n",
+        "Upon launching the notebook in Google Colab, follow the subsequent step-by-step instructions below to create your promptmule API Key and Token.\n",
         "\n",
         "Please note that a more extensive demonstration of the PromptMule functionality is slated for our upcoming demo, set to launch at the conclusion of our next sprint!\n",
         "\n",
@@ -47,7 +47,7 @@
         "\n",
         "---\n",
         "\n",
-        "To start, simply click on the \"Run Cell\" button situated to the left of the code block. It bears a resemblance to the play button you might find on your DVD player in the garage. Once activated, feel free to explore and experiment with the code."
+        "If you are in Google Colab: To start, simply click on the \"Run Cell\" button situated to the left of the code block. It bears a resemblance to the play button you might find on your DVD player in the garage. Once activated, feel free to explore and experiment with the code."
       ],
       "metadata": {
         "id": "0-1LXf7avPdi"
