Expanded detail in text, included forms for username/password/etc text input

--- a/promptmule_api_demo_v2.ipynb
+++ b/promptmule_api_demo_v2.ipynb
@@ -33,7 +33,7 @@
       "source": [
         "---\n",
         "\n",
-        "## Introduction to OpenAI + PromptMule Cache Functional Demo v0.2\n",
+        "## Introduction to OpenAI + PromptMule Semantic Cloud Cache Demo v0.3\n",
         "\n",
         "Welcome to our interactive demonstration guide. This tutorial will navigate you through the process of creating an API Key and Token, enabling you to utilize the PromptMule cloud cache. Specifically designed for a Google Colaboratory runtime environment, this demo offers an engaging exploration into sending prompts through OpenAI and testing cache functions.\n",
         "\n",
@@ -96,11 +96,34 @@
     {
       "cell_type": "code",
       "source": [
-        "your_new_username = \"YOUR_USERNAME\"    # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
-        "your_new_password = \"YOUR_PASSWORD\"     # complex passwords are required (str)\n",
-        "your_same_old_email = \"YOUR_EMAIL\" # must be a valid email as it is used in this process to validate (str)\n",
-        "your_new_appname = \"YOUR_APPNAME\"       # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "# @title Form to update python variables\n",
+        "#@markdown Below replace the capital LETTERS with your information, pick a username, complex password, real email, and an application name that you will use as a reference in the future.\n",
         "\n",
+        "your_new_username = \"YOUR_NEW_USERNAME\"  #@param {type: \"string\"}  # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
+        "your_new_password = \"YOUR_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
+        "your_same_old_email = \"YOUR_EMAIL\" #@param {type: \"string\"} # must be a valid email as it is used in this process to validate (str)\n",
+        "your_new_appname = \"YOUR_APPNAME\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "#@markdown ---\n"
+      ],
+      "metadata": {
+        "id": "qj8-Mtmpna8u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Setting Registration API call\n",
+        "Next we set up the headers and body of the of the registration API call, we will include your new username, password and real email to register you as a new user. Remeber, your email will get a verification email sent to it, so it must be legit."
+      ],
+      "metadata": {
+        "id": "XyKRfnpDon6u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "headers = {\n",
         "    'Content-Type': 'application/json'\n",
         "           }\n",
@@ -118,6 +141,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We update the endpoint of the API call to the Registration endpoint and send the API call."
+      ],
+      "metadata": {
+        "id": "NqUxtDD6pG0-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "promptmule = ENDPOINT + REGISTRATION\n",
@@ -132,7 +164,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Handle response\n",
+        "# Handle Registration API response\n",
         "if registration.status_code == 200:\n",
         "    print(\"Registration successful: \", json.dumps(json.loads(registration.text), indent=4))\n",
         "else:\n",
@@ -175,6 +207,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The headers do not change for this API Call, so to Login we will not change them. We will change the body of the call, to only use your username and password."
+      ],
+      "metadata": {
+        "id": "2q1C91OipaOL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data_raw = {\n",
@@ -187,6 +228,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We update the endpoint to point at the Login endpoint and Send the API call."
+      ],
+      "metadata": {
+        "id": "FUyJNImupofw"
+      }
     },
     {
       "cell_type": "code",
@@ -242,6 +292,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The headers will be modified in order to use the Key Generation API. We will use an Authorization: Bearer <API_Token> which is the API token which you recieved in the earlier token generation step. We will also update the body of the API call to reflec the application name you chose."
+      ],
+      "metadata": {
+        "id": "AIgOj3oUp7ag"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "headers = {\n",
@@ -258,6 +317,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next you will update the endpoint to the Key Generation endpoint and send the API call."
+      ],
+      "metadata": {
+        "id": "Z0-7lg_-qWBc"
+      }
     },
     {
       "cell_type": "code",
@@ -289,10 +357,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Here is the revised and clarified version of the text:\n",
-        "\n",
         "---\n",
-        "\n",
         "Congratulations! Token generation was successful. Your response should look something like this:\n",
         "\n",
         "```json\n",
@@ -304,7 +369,7 @@
         "}\n",
         "```\n",
         "\n",
-        "You can now utilize your newly generated Token and API key. These can be used to interact with GPT-4 and GPT-3.5 models via the chat completion endpoint of OpenAI, available at: https://api.openai.com/v1/chat/completions\n",
+        "You can now utilize your newly generated Token and API key. These can be used to interact with GPT-4 and/or GPT-3.5 models via the chat completion endpoint of OpenAI, available at: https://api.openai.com/v1/chat/completions\n",
         "\n",
         "For information on how to structure the OpenAI Request Body, refer to the official documentation here: https://platform.openai.com/docs/api-reference/chat/create\n",
         "\n",
@@ -323,14 +388,44 @@
     {
       "cell_type": "code",
       "source": [
-        "api_key = json.loads(api_key_gen.text)['api-key'] # set your API KEY into the api_key variable\n",
-        "OPENAI_API_KEY = 'YOUR_OPENAI_KEY' # this is your OpenAI API Key, it may impact your model choice"
+        "api_key = json.loads(api_key_gen.text)['api-key'] # set your API KEY into the api_key variable\n"
       ],
       "metadata": {
         "id": "SyBdg4J0ChSm"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title Form to update python variables\n",
+        "#@markdown Input your OpenAI API key here. To obtain an OpenAI API key (https://platform.openai.com/account/api-keys), OR sign up on the OpenAI website, provide necessary information, and upon approval, you'll be issued an API key to authenticate your requests to the API.\n",
+        "\n",
+        "OPENAI_API_KEY = 'YOUR_OPENAI_KEY' #@param {type: \"string\"} # this is your OpenAI API Key, it may impact your model choiceyour_new_password = \"YOUR_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
+        "#@markdown ---\n"
+      ],
+      "metadata": {
+        "id": "sR6ysXWSq--7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We need to update the headers for the Prompt API call, per below with Authorization which is different than previous calls using your API Token, and x-api-key which is your PromptMule API-Key, and your OpenAI API-Key."
+      ],
+      "metadata": {
+        "id": "_NB2kXrasXv-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "I34UdyV0quak"
+      }
     },
     {
       "cell_type": "code",
@@ -376,6 +471,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Note that we are pointing the endpoint at the Prompt endpoint this time, and then sending the API call."
+      ],
+      "metadata": {
+        "id": "qXfS1mV8tO8z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "promptmule = ENDPOINT + PROMPT\n",
@@ -401,6 +505,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The next step is just an example report of what might be done with the json object that is passed back with the PromptMule Prompt API response json. Feel free to play with it."
+      ],
+      "metadata": {
+        "id": "IweupRSUtXDV"
+      }
     },
     {
       "cell_type": "code",
@@ -445,7 +558,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Make the OpenAI call via PromptMule the second time, this time it will have a cache hit."
+        "Make the OpenAI call via PromptMule the second time, this time it will have a cache hit. The purpose of this second call is to demonstrate a cache hit. Obviously, you could also just go back a few steps (specifically the one where we sent...promptmule_response = requests.request(\"POST\", promptmule, headers=headers, json=api_call_body)) and you can resend that call and trigger cache hits. You can also change the prompt and see how novel prompts bypass the cache, or see how semantically similar prompts get sent back. Anyway, there are many ways to use this cache creatively, the sky is the limit. If you want to become a member of the Early Access Dev Team, be one of the first to share some code and your story. info@promptmule.com"
       ],
       "metadata": {
         "id": "nXTkYfeQA7u_"
