Updated intro text

--- a/promptmule_api_demo_v2.ipynb
+++ b/promptmule_api_demo_v2.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "Welcome to our interactive demonstration guide. This tutorial will navigate you through the process of creating an API Key and Token, enabling you to utilize the PromptMule cloud cache. Specifically designed for a Google Colaboratory runtime environment, this demo offers an engaging exploration into sending prompts through OpenAI and testing cache functions.\n",
         "\n",
-        "If you are in github: Begin by clicking the \"Open in Colab\" icon situated at the top left corner of the Github Preview page. This action opens the Google Colab notebook in a new tab, granting you the ability to run, modify, and interact with the demo code within.\n",
+        "If you are reading this while in github(https://github.com/): Begin by clicking the \"Open in Colab\" icon situated at the top left corner of the Github Preview page. This action opens the Google Colab notebook in a new tab, granting you the ability to run, modify, and interact with the demo code within.\n",
         "\n",
         "Upon launching the notebook in Google Colab, follow the subsequent step-by-step instructions below to create your promptmule API Key and Token.\n",
         "\n",
@@ -47,7 +47,7 @@
         "\n",
         "---\n",
         "\n",
-        "If you are in Google Colab: To start, simply click on the \"Run Cell\" button situated to the left of the code block. It bears a resemblance to the play button you might find on your DVD player in the garage. Once activated, feel free to explore and experiment with the code."
+        "If you are reading this while in Google Colab(https://colab.research.google.com/): To start, simply click on the \"Run Cell\" button situated to the left of the code block. It bears a resemblance to the play button you might find on your DVD player in the garage. Once activated, feel free to explore and experiment with the code."
       ],
       "metadata": {
         "id": "0-1LXf7avPdi"
@@ -402,7 +402,7 @@
         "# @title Form to update python variables\n",
         "#@markdown Input your OpenAI API key here. To obtain an OpenAI API key (https://platform.openai.com/account/api-keys), OR sign up on the OpenAI website, provide necessary information, and upon approval, you'll be issued an API key to authenticate your requests to the API.\n",
         "\n",
-        "OPENAI_API_KEY = 'YOUR_OPENAI_KEY' #@param {type: \"string\"} # this is your OpenAI API Key, it may impact your model choiceyour_new_password = \"YOUR_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
+        "OPENAI_API_KEY = 'YOUR_OPENAI_KEY' #@param {type: \"string\"} # this is your OpenAI API Key, it may impact your model choice\n",
         "#@markdown ---\n"
       ],
       "metadata": {
