--- a/promptmule_api_demo.ipynb
+++ b/promptmule_api_demo.ipynb
@@ -1,4 +1,3 @@
-<a href="https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_demo.ipynb" target="_parent"><img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"/></a>
 {
   "nbformat": 4,
   "nbformat_minor": 0,
@@ -21,6 +20,8 @@
     {
       "cell_type": "markdown",
       "source": [
+"<a href="https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_demo.ipynb" target="_parent"><img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"/></a>"
+
         "---\n",
         "\n",
         "## Introduction to OpenAI + PromptMule Semantic Cloud Cache Demo v0.3\n",
