--- a/promptmule_api_demo.ipynb
+++ b/promptmule_api_demo.ipynb
@@ -6,7 +6,8 @@
       "provenance": [],
       "cell_execution_strategy": "setup",
       "private_outputs": true,
-      "name": "promptmule-api-demo.ipynb"
+      "name": "promptmule-api-demo.ipynb",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -24,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Demo In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -363,8 +364,8 @@
         "{\n",
         "    \"success\": true,\n",
         "    \"message\": \"Api key has been generated successfully\",\n",
-        "    \"app-name\": \"mycoolapp001\",\n",
-        "    \"api-key\": \"3ohPNXHuvf7JK5O8mY0dp4pYd0hryARR1WmnOxIw\"\n",
+        "    \"app-name\": \"my_app_name\",\n",
+        "    \"api-key\": \"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
         "}\n",
         "```\n",
         "\n",
