--- a/promptmule_reporting_api_demo.ipynb
+++ b/promptmule_reporting_api_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIizARhDDZY1e1ir3TWRuG",
+      "authorship_tag": "ABX9TyPyQzlE6GGn4sObvjdLTxm7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,32 +66,35 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title Input your PromptMule Sign-in Attributes { run: \"auto\", display-mode: \"both\" }\n",
+        "#@markdown Below replace the capital LETTERS with your information, pick a username, complex password, real email, and an application name that you will use as a reference in the future.\n",
+        "\n",
+        "your_username = \"YOUR_USERNAME\"  #@param {type: \"string\"}  # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
+        "api_key = \"YOUR_PROMPTMULE_API_KEY\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
+        "your_appname = \"YOUR_APPNAME\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "your_token = \"YOUR_TOKEN\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "#@markdown ---\n",
         "ENDPOINT = 'https://820czjhki0.execute-api.us-west-2.amazonaws.com/dev/'\n",
-        "REGISTRATION = 'dev-signup' # registration for a developer\n",
-        "LOGIN = 'login'\n",
-        "KEY_GEN = 'api-keys'\n",
-        "PROMPT = 'prompt'"
+        "PROMPT = 'prompt'\n",
+        "DIALY_REPORT = 'usage/daily-stats'"
       ],
       "metadata": {
-        "id": "JaOtrKNnZwsB"
+        "id": "akXjrPniZ4bw"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# @title Form to update python variables\n",
-        "#@markdown Below replace the capital LETTERS with your information, pick a username, complex password, real email, and an application name that you will use as a reference in the future.\n",
+        "# @title Input OpenAI API KEY { run: \"auto\", display-mode: \"form\" }\n",
+        "#@markdown Input your OpenAI API key here. To obtain an OpenAI API key (https://platform.openai.com/account/api-keys), OR sign up on the OpenAI website, provide necessary information, and upon approval, you'll be issued an API key to authenticate your requests to the API.\n",
         "\n",
-        "your_new_username = \"YOUR_NEW_USERNAME\"  #@param {type: \"string\"}  # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
-        "your_new_password = \"YOUR_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
-        "your_same_old_email = \"YOUR_EMAIL\" #@param {type: \"string\"} # must be a valid email as it is used in this process to validate (str)\n",
-        "your_new_appname = \"YOUR_APPNAME\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "OPENAI_API_KEY = 'YOUR_OPENAI_API_KEY' #@param {type: \"string\"} # this is your OpenAI API Key, it may impact your model choice\n",
         "#@markdown ---\n"
       ],
       "metadata": {
-        "id": "akXjrPniZ4bw"
+        "id": "XnO543JMePAw"
       },
       "execution_count": null,
       "outputs": []
