Update and rename promptmule_api_demo.ipynb to promptmule_api_key_gen_demo.ipynb

--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "cell_execution_strategy": "setup",
       "private_outputs": true,
-      "name": "promptmule-api-demo.ipynb",
+      "name": "promptmule-api-key-gen-demo.ipynb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_key_gen_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,7 +33,7 @@
       "source": [
         "---\n",
         "\n",
-        "## Introduction to OpenAI + PromptMule Semantic Cloud Cache Demo v0.3\n",
+        "## Introduction to OpenAI + PromptMule Semantic Cloud Cache API Key Generation Demo v0.4\n",
         "\n",
         "Welcome to our interactive demonstration guide. This tutorial will navigate you through the process of creating an API Key and Token, enabling you to utilize the PromptMule cloud cache. Specifically designed for a Google Colaboratory runtime environment, this demo offers an engaging exploration into sending prompts through OpenAI and testing cache functions.\n",
         "\n",
