--- a/promptmule_reporting_api_demo.ipynb
+++ b/promptmule_reporting_api_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8iFTrpw9okE5lLwvuQFCh",
+      "authorship_tag": "ABX9TyM9RscsxSXH75uQkfIxPkwS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,21 +29,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
+        "\n",
         "# PromptMule Reporting API Demo v0.2\n",
         "\n",
-        "Welcome to our interactive demonstration guide. Using the PromptMule cache enables you to automatically cache prompts and responses to OpenAI, without having to manage those yourself. These will be kept in the AWS Cloud until you wish to download them via a the Report API. First, you will need to generate some traffic with a few prompts, then some reports.\n",
+        "Welcome to our interactive demonstration. Utilizing the PromptMule cache not only facilitates automatic caching of prompts and responses to OpenAI but also eliminates the need for personal management of these tasks. Stored securely in the AWS Cloud, this data can be conveniently downloaded via the Report API whenever you wish. To begin with, let's generate some traffic through a few prompts and subsequently, some reports.\n",
         "\n",
-        "This tutorial will guide you through the process of using the Reporting API, enabling you to harness the full potential of the PromptMule reporting service. Tailored specifically for a Google Colaboratory runtime environment, this demo provides an engaging exploration into sending reports through OpenAI and testing reporting functions. If you do not have an API-KEY or Token, see the Github guide to generate those here:[https://github.com/promptmule4real/demo/blob/main/promptmule_api_demo.ipynb]\n",
+        "This guide will direct you through the process of effectively using the Reporting API, empowering you to fully leverage the benefits of the PromptMule reporting service. Specifically designed for the Google Colaboratory runtime environment, this demo guides you through sending reports via OpenAI and testing the reporting functions. If you don't already have an API Key or Token, refer to our GitHub guide to generate these here: [https://github.com/promptmule4real/demo/blob/main/promptmule_api_demo.ipynb]\n",
         "\n",
-        "If you are reading this while on Github(https://github.com/): Start by clicking the \"Open in Colab\" icon located at the top left corner of the Github Preview page. This action will open the Google Colab notebook in a new tab, giving you the ability to run, modify, and interact with the demo code within.\n",
+        "If you're viewing this on GitHub (https://github.com/), click the \"Open in Colab\" button, located in the upper left corner of the GitHub Preview page. This will launch the Google Colab notebook in a new tab, providing you the opportunity to run, modify, and interact with the demo code.\n",
         "\n",
-        "Once you've launched the notebook in Google Colab, follow the subsequent step-by-step instructions below to effectively use the PromptMule Reporting API.\n",
+        "After launching the notebook in Google Colab, follow the subsequent instructions outlined below to make effective use of the PromptMule Reporting API.\n",
         "\n",
-        "Stay tuned for a more comprehensive demo of other PromptMule functionalities, set to debut at the end of our next sprint!\n",
+        "Please note that a more in-depth demo of additional PromptMule capabilities is scheduled to be released at the conclusion of our next development sprint!\n",
         "\n",
-        "We invite you to dive into this interactive exploration, and welcome your participation and feedback. Please visit us at www.promptmule.com.\n",
+        "We warmly welcome you to immerse yourself in this interactive experience and appreciate any feedback or queries you may have. Reach out to us at www.promptmule.com.\n",
         "\n",
-        "If you are reading this while in Google Colab(https://colab.research.google.com/): To start, simply click on the \"Run Cell\" button located to the left of the code block. It resembles the play button you might find on a media player. Once activated, feel free to explore and experiment with the code."
+        "---\n",
+        "\n",
+        "If you're currently in Google Colab (https://colab.research.google.com/): To begin, click on the \"Run Cell\" button located to the left of the code block. Resembling a play button on a media player, activating this will enable you to explore and experiment with the code at your leisure."
       ],
       "metadata": {
         "id": "PJvAGfifZh92"
@@ -62,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "GB8C5yR6Zcd3"
       },
@@ -90,7 +94,7 @@
       "metadata": {
         "id": "akXjrPniZ4bw"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +109,7 @@
       "metadata": {
         "id": "XnO543JMePAw"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +186,7 @@
       "metadata": {
         "id": "GFSOWfxM9rZT"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +280,7 @@
       "metadata": {
         "id": "1Ri02-PIDaBk"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +339,7 @@
       "metadata": {
         "id": "i5RQsclRIRgs"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -402,7 +406,7 @@
       "metadata": {
         "id": "un0JjnHbMST8"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,7 +476,7 @@
       "metadata": {
         "id": "FY_Ru0ljNdDJ"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
